Bring guides link back

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -38,6 +38,7 @@
           <li class="menu-item install"><a class="spec" href="/install.html">Install</a></li>
           <li class="menu-item learning"><a class="spec" href="/learning.html">Learning</a></li>
           <li class="menu-item docs"><a class="spec" href="/docs.html">Docs</a></li>
+          <li class="menu-item getting-started"><a class="spec" href="https://hexdocs.pm/elixir/1.16/introduction.html">Guides</a></li>
           <li class="menu-item cases"><a class="spec" href="/cases.html">Cases</a></li>
           <li class="menu-item blog"><a class="spec" href="/blog/">Blog</a></li>
         </ul>
