--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -24,6 +24,7 @@
     <li><a class="spec" href="irc://irc.libera.chat/elixir">#elixir on irc.libera.chat</a></li>
     <li><a class="spec" href="http://elixirforum.com">Elixir Forum</a></li>
     <li><a class="spec" href="https://discord.gg/elixir">Elixir on Discord</a></li>
+    <li><a class="spec" href="https://github.com/elixir-lang/elixir/wiki/Code-Editor-Support">IDE/Editor support</a></li>
     <li><a class="spec" href="https://www.meetup.com/topics/elixir/">Meetups around the world</a></li>
     <li><a class="spec" href="https://github.com/elixir-lang/elixir/wiki/Hiring-Elixir-Developers">Jobs and hiring (community wiki)</a></li>
     <li><a class="spec" href="https://github.com/elixir-lang/elixir/wiki">Events and resources (community wiki)</a></li>
