--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="canonical" href="https://hexdocs.pm/elixir/1.16/{{ page.redirect_to }}.html"/>
+<link rel="canonical" href="https://hexdocs.pm/elixir/{{ page.redirect_to }}.html"/>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<meta http-equiv="refresh" content="0;url=https://hexdocs.pm/elixir/1.16/{{ page.redirect_to }}.html" />
+<meta http-equiv="refresh" content="0;url=https://hexdocs.pm/elixir/{{ page.redirect_to }}.html" />
 </head>
 <body>
   <h3>Redirecting...</h3>
-  <a href="https://hexdocs.pm/elixir/1.16/{{ page.redirect_to }}.html">Click here if you are not redirected.<a>
-  <script>location='https://hexdocs.pm/elixir/1.16/{{ page.redirect_to }}.html'</script>
+  <a href="https://hexdocs.pm/elixir/{{ page.redirect_to }}.html">Click here if you are not redirected.<a>
+  <script>location='https://hexdocs.pm/elixir/{{ page.redirect_to }}.html'</script>
 </body>
 </html>
 
