Add ElixirConf US 2024 (#1763)

--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,4 +1,11 @@
-<!-- <div class="widget events">
+<div class="widget events">
   <h3 class="widget-title">Upcoming events</h3>
-  
-</div> -->
+  <a href="https://2024.elixirconf.com/">
+    <img src="https://2022.elixirconf.com/images/resources/elixirconf-logo.svg" alt="ElixirConf" />
+    <br />
+    <ul>
+      <li><b>Aug 27-30, 2024</b> - Orlando, FL.</li>
+      <li><b>10 training classes, 60+ speakers</b></li>
+    </ul>
+  </a>
+</div>
