Remove ESW baner

--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,14 +1,3 @@
-<div class="widget events">
+<!-- <div class="widget events">
   <h3 class="widget-title">Upcoming events</h3>
-  <a href="https://elixir-webrtc.org/elixir-stream-week">
-    <span
-      style="font-size: 22px; font-weight: bold; line-height: 110%; background: linear-gradient(261.82deg, #46ADD8 -4.89%, #675AF1 82.73%); color: transparent; background-clip: text; -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
-      Elixir Stream Week
-    </span>
-    <br />
-    <ul>
-      <li><b>Oct 21-25, 2024</b> - Remote</li>
-      <li><b>5 days, 5 streams, 5 Elixir experts</b></li>
-    </ul>
-  </a>
-</div>
+</div> -->
