Update documentary links, closes #1791

--- a/_includes/important-links.html
+++ b/_includes/important-links.html
@@ -1,13 +1,19 @@
 <div class="widget">
   <h3 class="widget-title">Important links</h3>
   <ul>
-    <li class="menu-item development"><a class="spec" href="/development.html">Development & Team</a></li>
-    <li><a class="spec" href="https://github.com/elixir-lang/elixir">Source code & issues tracker</a></li>
+    <li class="menu-item development">
+      <a class="spec" href="/development.html">Development & Team</a>
+    </li>
+    <li>
+      <a class="spec" href="https://github.com/elixir-lang/elixir"
+        >Source code & issues tracker</a
+      >
+    </li>
   </ul>
 </div>
 
 <div id="mini-docu" class="widget">
-  <a href="https://cult.honeypot.io/originals/elixir-the-documentary">
+  <a href="https://www.youtube.com/watch?v=lxYFOM3UJzo">
     <div class="mini-docu-cta">
       <div class="mini-docu-copy">Watch the Elixir<br />mini-documentary!</div>
     </div>
@@ -25,16 +31,33 @@
     <li><a class="spec" href="http://elixirforum.com">Elixir Forum</a></li>
     <li><a class="spec" href="https://elixir-slack.community">Elixir on Slack</a></li>
     <li><a class="spec" href="https://discord.gg/elixir">Elixir on Discord</a></li>
-    <li><a class="spec" href="https://github.com/elixir-lang/elixir/wiki/Code-Editor-Support">IDE/Editor support</a>
+    <li>
+      <a class="spec" href="https://github.com/elixir-lang/elixir/wiki/Code-Editor-Support"
+        >IDE/Editor support</a
+      >
     </li>
-    <li><a class="spec" href="https://www.meetup.com/topics/elixir/">Meetups around the world</a></li>
-    <li><a class="spec" href="https://github.com/elixir-lang/elixir/wiki/Hiring-Elixir-Developers">Jobs and hiring
-        (community wiki)</a></li>
-    <li><a class="spec" href="https://github.com/elixir-lang/elixir/wiki">Events and resources (community wiki)</a></li>
+    <li>
+      <a class="spec" href="https://www.meetup.com/topics/elixir/">Meetups around the world</a>
+    </li>
+    <li>
+      <a class="spec" href="https://github.com/elixir-lang/elixir/wiki/Hiring-Elixir-Developers"
+        >Jobs and hiring (community wiki)</a
+      >
+    </li>
+    <li>
+      <a class="spec" href="https://github.com/elixir-lang/elixir/wiki"
+        >Events and resources (community wiki)</a
+      >
+    </li>
   </ul>
 </div>
 
 <div id="eef" class="widget">
-  <a href="https://erlef.org/" title="Join the Erlang Ecosystem Foundation"><img src="/images/logo/eef.png"
-      alt="Join the Erlang Ecosystem Foundation" width="174" style="margin-top:-10px" /></a>
+  <a href="https://erlef.org/" title="Join the Erlang Ecosystem Foundation"
+    ><img
+      src="/images/logo/eef.png"
+      alt="Join the Erlang Ecosystem Foundation"
+      width="174"
+      style="margin-top: -10px"
+  /></a>
 </div>
