Improve display of cases on front page
- Lock flagship logos to always show
- Keep shuffling 3 logos to append
- Remove outlines, tags and make the layout a bit lighter

--- a/css/style.css
+++ b/css/style.css
@@ -588,13 +588,12 @@ body.learning         div.menu li.learning        a {
 .cases-boxes {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  gap: 0px 16px;
+  justify-content: space-evenly;
 }
 
 .cases-box {
-  margin: 1em 0.25em;
   text-decoration: none;
-  width: 205px;
 }
 
 #shuffled-cases .cases-box {
@@ -606,18 +605,11 @@ body.learning         div.menu li.learning        a {
 }
 
 .cases-image {
-  display: flex;
-  justify-content: center;
-  width: 175px;
-  height: 125px;
-  padding: 10px;
-  outline-style: solid;
-  outline-width: 1.5px;
-  outline-color: #E5E5E5;
-  margin: auto;
+  min-width: 90px;
+  height: 90px;
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 140px;
+  background-size: contain;
 }
 
 .cases-tag {
