--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,5 +1,7 @@
 <div class="widget news">
-  <h3>News: <a href="/blog/2024/12/19/elixir-v1-18-0-released/">Elixir v1.18 released</a></h3>
+  <h3>
+    News: <a href="/blog/2025/08/05/global-elixir-meetups/">Global Elixir Meetups announced</a>
+  </h3>
 </div>
 
 <div class="widget search">
