Update events section

--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,11 +1,4 @@
-<div class="widget events">
+<!-- <div class="widget events">
   <h3 class="widget-title">Upcoming events</h3>
-  <a href="https://elixirconf.com/">
-    <img src="https://2022.elixirconf.com/images/resources/elixirconf-logo.svg" alt="ElixirConf" />
-    <br />
-    <ul>
-      <li><b>Aug 28-29, 2025</b> - Orlando, FL.</li>
-      <li><b>Aug 27 - Seven Workshops to choose from</b></li>
-    </ul>
-  </a>
-</div>
+
+</div> -->
